005-Draw Ball, Paddle and Score
drawBall();
drawPaddle();
drawScore()

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
         "activityBar.background": "#591417",
         "titleBar.activeBackground": "#7C1C20",
         "titleBar.activeForeground": "#FEFBFB"
-    }
+    },
+    "cSpell.words": [
+        "Arial"
+    ]
 }
